[package]
authors = ["Robert Walker <rob@tenfoot.org.uk>"]
edition = "2018"
name = "eskarp"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.0.0"
embedded-hal = "0.2"
embedded-time = "0.12.0"
nb = "1.0.0"
panic-halt = "0.2"
rp-pico = "0.4"
usb-device = "0.2.0"
heapless = "0.7"

[dependencies.cortex-m-rt]
features = ["device"]
version = "^0.7"

[dependencies.either]
default-features = false
version = "1.6.1"

[dependencies.keyberon]
git = "https://github.com/TeXitoi/keyberon"

[profile]
[profile.release]
debug = true
incremental = false
lto = true
opt-level = "z"
