[package]
authors = ["Robert Walker <rob@tenfoot.org.uk>"]
edition = "2021"
name = "eskarp"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.0.0"
embedded-hal = "0.2"
fugit = "0.3.6"
heapless = "0.7"
nb = "1.0.0"
panic-halt = "0.2"
rp-pico = "0.5"
smart-leds = "0.3"
usb-device = "0.2.0"
ws2812-pio = "0.4"
rp2040-monotonic = "1.1.0"

[dependencies.cortex-m-rt]
features = ["device"]
version = "^0.7"

[dependencies.either]
default-features = false
version = "1.6.1"

[dependencies.keyberon]
git = "https://github.com/TeXitoi/keyberon"

[profile]
[profile.release]
debug = true
incremental = false
lto = true
opt-level = "z"
