[package]
edition = "2021"
name = "eskarp"
version = "0.1.0"
authors = ["Robert Walker <rob@tenfoot.org.uk>"]
description = "Eskarp ergonomic keyboard firmware"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rwalkr/eskarp"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.0.0"
embedded-hal = "0.2"
fugit = "0.3.6"
heapless = "0.7"
nb = "1.0.0"
rp2040-panic-usb-boot = "0.3.0"
rp-pico = "0.5"
smart-leds = "0.3"
usb-device = "0.2.0"
ws2812-pio = "0.4"
rp2040-monotonic = "1.1.0"
defmt = "0.3"
defmt-rtt = "0.3"
micromath = "2.0.0"
iqs5xx = "0.1.0"

[dependencies.cortex-m-rt]
features = ["device"]
version = "^0.7"

[dependencies.either]
default-features = false
version = "1.6.1"

[dependencies.keyberon]
git = "https://github.com/TeXitoi/keyberon"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
